--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <maven.compiler.target>11</maven.compiler.target>
         <aspectj.version>1.9.7</aspectj.version>
         <allure.version>2.15.0</allure.version>
+        <allure.results.directory>${project.basedir}/target/allure-results</allure.results.directory>
+        <allure.report.directory>${project.basedir}/target/allure-report</allure.report.directory>
     </properties>
 
     <dependencies>
@@ -40,11 +42,6 @@
 
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-        </dependency>
-        <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
             <version>1.0.2</version>
@@ -58,8 +55,8 @@
 
         <dependency>
             <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-junit4</artifactId>
-            <version>${allure.version}</version>
+            <artifactId>allure-junit5</artifactId>
+            <version>2.23.0</version>
         </dependency>
         <dependency>
             <groupId>io.rest-assured</groupId>
@@ -75,7 +72,22 @@
             <!-- модуль взаимодействия Allure и RestAssured -->
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-rest-assured</artifactId>
-            <version>${allure.version}</version>
+            <version>2.15.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite</artifactId>
+            <version>1.9.2</version>
         </dependency>
     </dependencies>
     <build>
@@ -85,17 +97,16 @@
                     <!-- настройка плагина maven-surefire-plugin -->
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.1.2</version>
+                    <version>2.22.2</version>
                     <configuration>
                         <useSystemClassLoader>false</useSystemClassLoader>
-                        <testFailureIgnore>false</testFailureIgnore>
                         <argLine>
                             -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                         </argLine>
                         <properties>
                             <property>
-                                <name>listener</name>
-                                <value>io.qameta.allure.junit4.AllureJunit4</value>
+                                <name>junit.jupiter.extensions.autodetection.enabled</name>
+                                <value>true</value>
                             </property>
                         </properties>
                         <systemProperties>
@@ -108,6 +119,11 @@
                     </configuration>
                     <dependencies>
                         <dependency>
+                            <groupId>org.junit.platform</groupId>
+                            <artifactId>junit-platform-surefire-provider</artifactId>
+                            <version>1.2.0</version>
+                        </dependency>
+                        <dependency>
                             <groupId>org.aspectj</groupId>
                             <artifactId>aspectjweaver</artifactId>
                             <version>${aspectj.version}</version>
@@ -118,9 +134,11 @@
                 <plugin>
                     <groupId>io.qameta.allure</groupId>
                     <artifactId>allure-maven</artifactId>
-                    <version>2.10.0</version>
+                    <version>2.9</version>
                     <configuration>
-                        <reportVersion>2.15.0</reportVersion>
+                        <reportVersion>${allure.version}</reportVersion>
+                        <resultsDirectory>${allure.results.directory}</resultsDirectory>
+                        <reportDirectory>${allure.report.directory}</reportDirectory>
                     </configuration>
                 </plugin>
             </plugins>
